--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Nunito:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Nunito:wght@300&display=swap");
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: rgb(231, 225, 205);
   margin: 0;
@@ -38,24 +42,9 @@ a {
   opacity: 0.4;
 }
 
-/* .image {
-  height: 800px;
-  width: 100%;
-  overflow: hidden;
-  position: absolute;
-}
-
-.zoe-image {
-  position: relative;
-  top: -5%;
-  width: 100%;
-} */
-
 .header {
   z-index: 1;
-  /* position: absolute; */
   position: relative;
-  width: 100%;
   margin: 0 auto;
   font-size: 20px;
   color: rgb(255, 255, 255);
@@ -65,6 +54,10 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+#site-title--sm {
+  display: none;
 }
 
 .menu {
@@ -77,6 +70,7 @@ a {
 
 .main-section {
   width: 100%;
+  height: auto;
 }
 
 .row {
@@ -103,6 +97,7 @@ a {
 
 .subscribe {
   height: 100px;
+  /* width: 100%; */
   border-bottom: 0.8px solid black;
 }
 
@@ -128,13 +123,14 @@ a {
 }
 
 .grid-inner_content {
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 3fr 2fr;
   grid-gap: 60px;
   max-height: 180px;
 }
 
 .grid-inner_content h3 {
   text-transform: uppercase;
+  white-space: nowrap;
 }
 
 .grid-inner_text p {
@@ -185,19 +181,21 @@ a {
 }
 
 .subscribe-grid {
-  grid-template-columns: 6fr 3fr 1fr 1fr;
+  grid-template-columns: 8fr 5fr 1fr 1fr;
   grid-gap: 80px;
 }
 
 .subscribe-grid h4 {
   text-transform: uppercase;
   font-size: 1.12em;
+  white-space: nowrap;
 }
 
 .site-title {
   text-transform: uppercase;
   font-size: 1.5em;
   font-family: "Times New Roman", Times, serif;
+  white-space: nowrap;
 }
 
 .site-title h1:first-of-type::after {
@@ -219,38 +217,366 @@ a {
 }
 
 .email {
-  text-transform: uppercase;
+  max-width: 380px;
 }
 
 .download--text {
+  text-transform: uppercase;
   font-style: italic;
-  font-size: 0.75em;
-  margin: 7px 0;
+  font-size: 0.76em;
+  margin: 7px 0 20px;
 }
 
-/* .email-form {
+.email--form {
   width: 100%;
-} */
+  padding-bottom: 2px;
+  border-bottom: 1px solid black;
+}
 
 .email--input {
   width: 80%;
   background-color: initial;
   border: none;
-  padding: 0;
+  padding: 5px 0;
+}
+
+.email--input:active,
+.email--input:focus {
+  background-color: initial;
+}
+
+.email--input::placeholder {
+  text-transform: uppercase;
+  color: rgb(156, 156, 156);
 }
 
 .submit--button {
-  width: 16%;
+  width: 18%;
+  background-color: initial;
+  border: none;
+  text-transform: uppercase;
+  padding: 0;
+  text-align: end;
+}
+
+.contact-social--title {
+  margin-bottom: 20px;
+}
+
+.contact-social--list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  font-size: 0.8em;
+}
+.contact-social--list li {
+  margin-bottom: 10px;
 }
 
 .footer {
-  height: 50px;
-  padding: 0 50px;
+  padding: 15px 50px;
 }
 
-@media (max-width: 1440px) {
-  /* .site-logo h1 {
-    font-size: 150px;
-    width: 90%;
-  } */
+.copyright h5 {
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  margin: 0;
+}
+
+.copyright h5 span {
+  font-size: 1.1em;
+}
+
+.copyright h5:first-of-type::after {
+  content: "";
+  display: inline-block;
+  width: 0.2em;
+  height: 0.2em;
+  background-color: black;
+  border-radius: 50%;
+  margin: 0.25em -0.2em 0.25em 0.2em;
+  position: relative;
+}
+
+/* xs */
+@media (max-width: 575.98px) {
+  body {
+    font-size: 13px;
+  }
+  h1 {
+    display: block;
+  }
+  h3 {
+    text-align: center;
+  }
+  .row {
+    padding: 0 30px;
+  }
+  .first-section .header {
+    padding: 0;
+  }
+  .site-title h1:first-of-type::after {
+    display: none;
+  }
+  .site-title p,
+  .email h4 {
+    white-space: initial;
+  }
+  .main-section .grid {
+    display: block;
+  }
+  .grid-section-2 {
+    height: 700px;
+  }
+  .section-2-inner_image {
+    height: 200px;
+    width: auto;
+  }
+  .grid-inner_list {
+    margin-top: 50px;
+  }
+  .grid-inner_list ul {
+    width: fit-content;
+    margin: 30px auto 0;
+  }
+  .grid-center {
+    height: 100%;
+  }
+  .grid-center .sec-3_image {
+    margin: 0;
+  }
+  .grid-section-4 {
+    height: 600px;
+  }
+  .grid-section-4 .grid-inner_quote {
+    height: auto;
+    margin-top: 60px;
+    margin-bottom: 0;
+  }
+  .subscribe {
+    margin: 60px 0;
+  }
+  .subscribe-grid .email {
+    margin-top: 0;
+  }
+  .footer {
+    background-color: rgb(59, 59, 59);
+    color: white;
+    height: auto;
+    padding: 4px 30px;
+  }
+}
+
+/* sm */
+@media (max-width: 767.98px) {
+  .header {
+    padding: 40px 50px;
+  }
+  #site-title--sm {
+    display: inline-block;
+    font-size: 20px;
+    color: black;
+    width: 100%;
+  }
+  .menu,
+  .black {
+    display: none;
+  }
+  .first-section {
+    height: 150px;
+    background: none;
+    border-bottom: 1px solid black;
+  }
+  .grid-section,
+  .subscribe-grid {
+    grid-template-columns: none;
+  }
+  .grid-section .row,
+  .grid-section div,
+  .subscribe {
+    border: none;
+  }
+  .site-title {
+    display: none;
+  }
+  .grid-section-1 {
+    margin: auto;
+    padding: 0;
+    width: 100%;
+  }
+  .grid-section-1 img {
+    width: 100%;
+    height: auto;
+  }
+  .grid-inner_image {
+    padding-bottom: 100px;
+  }
+  .sec-3_image {
+    margin-top: 100px;
+    margin-bottom: 50px;
+  }
+  .sec-3_image img {
+    width: 70%;
+    height: auto;
+  }
+  .grid-section-4 .grid-inner_content {
+    margin-top: 50px;
+  }
+  .grid-inner_quote {
+    height: 200px;
+    width: auto;
+    margin-top: -30px;
+  }
+  .subscribe {
+    height: fit-content;
+    font-size: 1.1em;
+  }
+  .subscribe-grid {
+    grid-gap: 60px;
+  }
+  .email {
+    max-width: none;
+    margin-bottom: 50px;
+    margin-top: -100px;
+  }
+  .contact,
+  .social {
+    text-align: center;
+  }
+}
+
+/* md */
+@media (min-width: 768px) and (max-width: 991.98px) {
+  body {
+    font-size: 13px;
+  }
+  .menu {
+    font-size: 30px;
+    width: 500px;
+  }
+  .first-section,
+  .black {
+    height: 500px;
+  }
+  .grid-section {
+    grid-auto-rows: 600px;
+  }
+  .grid-section-1 img {
+    height: auto;
+    width: 100%;
+  }
+  .section-2-inner_image {
+    height: 180px;
+    margin: 0;
+  }
+  .grid-section-2 .grid-inner_image {
+    padding-bottom: 40px;
+  }
+  .sec-3_image img {
+    height: 300px;
+  }
+  .grid-section-4 .grid-inner_content,
+  .grid-inner_content {
+    grid-gap: 30px;
+  }
+  .grid-inner_text p,
+  .grid-inner_list ul {
+    margin-top: 20px;
+  }
+  .grid-inner_quote {
+    width: 350px;
+    height: 320px;
+    font-size: 1.2em;
+  }
+  .site-title {
+    font-size: 0.7em;
+  }
+  .subscribe-grid {
+    grid-gap: 35px;
+    /* grid-template-columns: 4fr, 4fr, 1fr, 1fr; */
+  }
+}
+
+/* lg */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  body {
+    font-size: 14px;
+  }
+  .first-section,
+  .black {
+    height: 650px;
+  }
+  .grid-section-1 img {
+    height: 450px;
+    margin: 75px 0;
+  }
+  .section-2-inner_image {
+    height: 250px;
+    margin: 30px 0;
+  }
+  .grid-inner_content {
+    grid-gap: 40px;
+  }
+  .grid-inner_text p,
+  .grid-inner_list ul {
+    margin-top: 20px;
+    font-size: 0.95em;
+  }
+  .grid-inner_list ul li {
+    padding-left: 1.5rem;
+  }
+  .grid-inner_quote {
+    width: 400px;
+    height: 420px;
+    font-size: 1.1em;
+  }
+  .site-title {
+    font-size: 1.15em;
+  }
+  .site-title h1:first-of-type::after {
+    width: 0.15em;
+    height: 0.15em;
+    margin: 0.25em 0.05em 0.25em 0.2em;
+  }
+  .title--about {
+    margin: 8px 2px;
+  }
+  .subscribe-grid {
+    grid-gap: 50px;
+  }
+  .subscribe-grid h4 {
+    grid-template-columns: 8fr 4fr 1fr 1fr;
+  }
+}
+
+/* xl */
+@media (min-width: 1200px) and (max-width: 1489.98px) {
+  .grid-inner_content {
+    grid-gap: 40px;
+  }
+  .grid-inner_text p,
+  .grid-inner_list ul {
+    margin-top: 20px;
+    font-size: 0.95em;
+  }
+  .grid-inner_list ul li {
+    padding-left: 1.7rem;
+  }
+  .grid-inner_quote {
+    height: 390px;
+  }
+  .site-title {
+    font-size: 1.28em;
+  }
+  .subscribe-grid {
+    grid-gap: 70px;
+  }
+  .download--text {
+    font-size: 0.68em;
+    margin: 7px 0 15px;
+  }
+}
+
+@media (min-width: 1490px) {
 }
