--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Nunito:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Nunito:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 html {
   scroll-behavior: smooth;
@@ -209,6 +209,10 @@ a {
   position: relative;
 }
 
+#logo-md {
+  display: none;
+}
+
 .title--about {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
@@ -355,10 +359,14 @@ a {
     margin-bottom: 0;
   }
   .subscribe {
-    margin: 60px 0;
+    margin: 60px 0 40px;
   }
   .subscribe-grid .email {
     margin-top: 0;
+  }
+  .contact,
+  .social {
+    margin-bottom: 30px;
   }
   .footer {
     background-color: rgb(59, 59, 59);
@@ -426,19 +434,20 @@ a {
   .grid-inner_quote {
     height: 200px;
     width: auto;
-    margin-top: -30px;
+    margin: 60px 0 120px;
   }
   .subscribe {
     height: fit-content;
     font-size: 1.1em;
   }
   .subscribe-grid {
-    grid-gap: 60px;
+    grid-gap: 30px;
+    grid-template-columns: 1fr 1fr;
   }
   .email {
     max-width: none;
     margin-bottom: 50px;
-    margin-top: -100px;
+    grid-column: 1/3;
   }
   .contact,
   .social {
@@ -489,12 +498,19 @@ a {
     height: 320px;
     font-size: 1.2em;
   }
-  .site-title {
-    font-size: 0.7em;
+  #logo {
+    display: none;
+  }
+  #logo-md {
+    display: block;
+    font-size: 1.5em;
+  }
+  .site-title h1:first-of-type::after {
+    display: none;
   }
   .subscribe-grid {
     grid-gap: 35px;
-    /* grid-template-columns: 4fr, 4fr, 1fr, 1fr; */
+    grid-template-columns: 1fr 4fr 1fr 1fr;
   }
 }
 
