--- a/style/style.css
+++ b/style/style.css
@@ -33,44 +33,69 @@ a {
 
 .first-section {
   height: 800px;
-  background: no-repeat center/100% url(/images/img1.jpg);
-}
-
-.black {
-  height: 800px;
-  background-color: black;
-  opacity: 0.4;
+  background: transparent;
+  /* background: no-repeat center/100% url(/images/img1.jpg); */
 }
 
 .header {
-  z-index: 1;
-  position: relative;
-  margin: 0 auto;
-  font-size: 20px;
+  z-index: -1;
+  /* margin: 0 auto;
   color: rgb(255, 255, 255);
   text-transform: uppercase;
-  font-size: 45px;
+  font-size: 45px; */
 
   display: flex;
   flex-direction: row;
   justify-content: center;
+  /* background: #555 url(/images/img1.jpg) center no-repeat; */
+  background: no-repeat center/100% url(/images/img1.jpg);
+  height: 800px;
+  position: fixed;
+  width: 100%;
 }
 
 #site-title--sm {
   display: none;
 }
 
+.black {
+  background-color: rgba(0, 0, 0, 0.308);
+  height: 800px;
+  width: 100%;
+
+  position: relative;
+  /* top: 70px; */
+}
+
 .menu {
-  display: flex;
+  /* display: flex;
   margin: 60px;
   width: 700px;
   justify-content: space-around;
-  position: absolute;
+  position: absolute; */
+
+  /* display: flex; */
+  margin: 60px;
+  width: 100%;
+  text-align: center;
+  /* justify-content: space-around; */
+  /* position: absolute; */
+
+  margin: 0;
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  font-size: 45px;
+
+  color: white;
+  position: fixed;
+  /* background-color: rgba(0, 0, 0, 0.308); */
+  height: 70px;
 }
 
 .main-section {
   width: 100%;
   height: auto;
+  background-color: inherit;
 }
 
 .row {
@@ -279,6 +304,7 @@ a {
 
 .footer {
   padding: 15px 50px;
+  background-color: inherit;
 }
 
 .copyright h5 {
@@ -465,7 +491,7 @@ a {
     width: 500px;
   }
   .first-section,
-  .black {
+  .header {
     height: 500px;
   }
   .grid-section {
@@ -520,7 +546,7 @@ a {
     font-size: 14px;
   }
   .first-section,
-  .black {
+  .header {
     height: 650px;
   }
   .grid-section-1 img {
