--- a/style/style-project-1989.css
+++ b/style/style-project-1989.css
@@ -5,8 +5,10 @@
   max-width: 200px;
 }
 
-.image-section--lg {
-  height: 1000px;
+.image-section--lg,
+.image-section--md {
+  height: auto;
+  max-height: 1000px;
 }
 
 .image-section--lg img {
@@ -14,36 +16,46 @@
   height: 100%;
 }
 
-.tube-section {
+.slider-section {
+  height: 900px;
+}
+
+.three-section {
   grid-column: 1/3;
   justify-content: space-evenly;
   padding: 50px 0;
+
+  align-items: end;
 }
 
-.tube-section img {
-  height: 100%;
+.three-section img {
+  height: 900px;
   width: auto;
 }
 
-.main-section .site-1989 {
+.main-section .site-1989,
+.marquee {
   grid-column: 1/3;
   border-bottom: none;
 }
 
-.site-1989 img {
+.site-1989-header img {
   width: 100%;
+  height: auto;
 }
 
 .site-1989-main {
   grid-template-columns: 33% 17% 17% 33%;
 }
 
-.button-down {
+.button-down,
+.site-1989-bodycream-description {
   grid-column: 2/5;
-  height: 550px;
+  height: 500px;
 }
 
-.button-down img {
+.button-down img,
+.site-1989-bodycream-description img {
   height: 70%;
   width: auto;
   position: relative;
@@ -70,6 +82,10 @@
   border-right: 0;
 }
 
+.site-1989-featuring {
+  border-left: none;
+}
+
 .site-1989-featuring img {
   height: 101px;
   width: auto;
@@ -84,6 +100,130 @@
 .site-1989-essentials img {
   height: 130px;
   width: auto;
+}
+
+#product-2 {
+  height: 80%;
+  margin-bottom: 25px;
+}
+#product-3 {
+  height: 60%;
+  margin-bottom: 40px;
+}
+
+.three-section--products {
+  background-color: #fbfbfb;
+}
+
+.marquee {
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+
+  transition: 0.2s ease-out;
+}
+
+.marquee pre {
+  font-family: "Montserrat", sans-serif;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+  font-size: 110px;
+  font-weight: 600;
+  display: inline-block;
+  padding-left: 100%;
+  -webkit-animation: marquee 15s infinite linear;
+  animation: marquee 15s infinite linear;
+}
+
+@-webkit-keyframes marquee {
+  0% {
+    -webkit-transform: translate(0, 0);
+  }
+  100% {
+    -webkit-transform: translate(-100%, 0);
+  }
+}
+@keyframes marquee {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(-100%, 0);
+  }
+}
+
+.marquee:hover {
+  background-color: black;
+  text-shadow: 0px 1px 0 rgb(255, 255, 255), 0px -1px 0 rgb(255, 255, 255),
+    1px 0px 0 rgb(255, 255, 255), -1px 0px 0 rgb(255, 255, 255),
+    1px 1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(255, 255, 255),
+    -1px 1px 0 rgb(255, 255, 255), -1px -1px 0 rgb(255, 255, 255);
+  -webkit-text-shadow: 0px 1px 0 rgb(255, 255, 255),
+    0px -1px 0 rgb(255, 255, 255), 1px 0px 0 rgb(255, 255, 255),
+    -1px 0px 0 rgb(255, 255, 255), 1px 1px 0 rgb(255, 255, 255),
+    1px -1px 0 rgb(255, 255, 255), -1px 1px 0 rgb(255, 255, 255),
+    -1px -1px 0 rgb(255, 255, 255);
+  -moz-text-shadow: 0px 1px 0 rgb(255, 255, 255), 0px -1px 0 rgb(255, 255, 255),
+    1px 0px 0 rgb(255, 255, 255), -1px 0px 0 rgb(255, 255, 255),
+    1px 1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(255, 255, 255),
+    -1px 1px 0 rgb(255, 255, 255), -1px -1px 0 rgb(255, 255, 255);
+  font-size: 46px;
+  color: rgb(0, 0, 0);
+}
+
+.typography-section {
+  height: 800px;
+}
+
+#typography,
+.typography {
+  position: absolute;
+  height: 200px;
+  width: auto;
+}
+
+.typography-section .typography {
+  height: auto;
+  flex-direction: column;
+}
+
+#typography-1989-logo,
+#slider-section-1989-logo {
+  height: 50px;
+  width: auto;
+  margin: 50px;
+}
+
+#typography-change {
+  height: 90px;
+}
+
+.site-1989-bodycream-image {
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
+}
+
+.site-1989-bodycream-image img {
+  height: 400px;
+}
+
+.site-1989-bodycream-details {
+  padding: 25px 0;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
+.site-1989-bodycream-details img {
+  height: 140px;
+}
+
+.site-1989-bodycream-image--sm {
+  padding: 25px 0;
+  border-left: 1px solid black;
+  border-top: 1px solid black;
+}
+.site-1989-bodycream-image--sm img {
+  height: 150px;
 }
 
 /* // Экстрамалые девайсы («портретные телефоны», < 576px) */
@@ -161,6 +301,10 @@
     width: auto;
     height: 110%;
   }
+  .three-section img {
+    height: 650px;
+    width: auto;
+  }
   .site-1989-main {
     height: 600px;
   }
@@ -199,6 +343,10 @@
     width: auto;
     height: 110%;
   }
+  .three-section img {
+    height: 750px;
+    width: auto;
+  }
   .site-1989-main {
     height: 700px;
   }
@@ -228,5 +376,12 @@
   .site-1989-essentials img {
     height: 105px;
     width: auto;
+  }
+}
+
+@media (min-width: 1440px) {
+  .image-section--lg img {
+    width: 100%;
+    height: auto;
   }
 }
