--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,12 @@ html {
   transition: 0.1s ease;
   padding: 0;
   margin: 0;
+
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 body {
